Fixed performance warning for LiferayServiceXMLLineMarkerProvider, added unit tests, added quick fix for Exception name inspection in service.xml

--- a/testdata/de/dm/intellij/liferay/language/service/LiferayServiceXMLExceptionNameInspectionTest/service_fixed.xml
+++ b/testdata/de/dm/intellij/liferay/language/service/LiferayServiceXMLExceptionNameInspectionTest/service_fixed.xml
@@ -7,6 +7,6 @@
 
     <exceptions>
         <exception>AccountName</exception>
-        <exception><warning descr="Do not add Exception at the end of the name">AddressCityException</warning></exception>
+        <exception>AddressCity</exception>
     </exceptions>
 </service-builder>
