--- a/testdata/de/dm/intellij/liferay/language/service/LiferayServiceXMLLineMarkerProviderTest/service.xml
+++ b/testdata/de/dm/intellij/liferay/language/service/LiferayServiceXMLLineMarkerProviderTest/service.xml
@@ -3,7 +3,7 @@
         "http://www.liferay.com/dtd/liferay-service-builder_7_1_0.dtd">
 
 <service-builder package-path="de.dm.liferay">
-    <namespace>my-namespace</namespace>
+    <namespace>my_namespace</namespace>
 
     <entity name="MyModel" local-service="true">
         <column name="myModelId" type="long" primary="true" />
