Feature: Inject SQL language into custom-sql definition files

--- a/testdata/de/dm/intellij/liferay/language/sql/LiferayCustomSQLLanguageInjectorTest/custom-sql/default.xml
+++ b/testdata/de/dm/intellij/liferay/language/sql/LiferayCustomSQLLanguageInjectorTest/custom-sql/default.xml
@@ -1,5 +1,5 @@
 <custom-sql>
     <sql id="de.dm.liferay.custom.sql.findEntity">
-        <caret>
+        <![CDATA[<caret>]]>
     </sql>
 </custom-sql>
