--- a/testdata/de/dm/intellij/liferay/language/xml/LiferayXmlDeprecationInspectionTest/workflow.xml
+++ b/testdata/de/dm/intellij/liferay/language/xml/LiferayXmlDeprecationInspectionTest/workflow.xml
@@ -3,7 +3,7 @@
 <workflow-definition
 		xmlns="urn:liferay.com:liferay-workflow_7.0.0"
 		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		<warning descr="The XML Schema Location should be matched with the Liferay version">xsi:schemaLocation="urn:liferay.com:liferay-workflow_7.0.0 http://www.liferay.com/dtd/liferay-workflow-definition_7_0_0.xsd"</warning>
+		<warning descr="The XML Schema Location should matched the Liferay version">xsi:schemaLocation="urn:liferay.com:liferay-workflow_7.0.0 http://www.liferay.com/dtd/liferay-workflow-definition_7_0_0.xsd"</warning>
 >
 	<name>My Workflow</name>
 	<description>My Workflow</description>
