additional inspections for portal-ext.properties and system-ext.properties

--- a/testdata/de/dm/intellij/liferay/language/properties/LiferayPropertiesDeprecationInspectionTest/portal-ext.properties
+++ b/testdata/de/dm/intellij/liferay/language/properties/LiferayPropertiesDeprecationInspectionTest/portal-ext.properties
@@ -1,1 +1,1 @@
-<warning descr="Removed Portal Properties Used to Display Sections in Form Navigators (see LPS-54903)">layout.form.add=foobar</warning>
+<warning descr="Portal property \"layout.form.add\" is obsolete"><warning descr="Removed Portal Properties Used to Display Sections in Form Navigators (see LPS-54903)">layout.form.add=foobar</warning></warning>
